Fixed layout issues and added a 'cancel' button

--- a/stylesheets/gist.less
+++ b/stylesheets/gist.less
@@ -5,6 +5,10 @@
 @import "ui-variables";
 
 .gist {
+  .panel-body.padded {
+    padding-bottom: 0;
+  }
+
   .loading {
     margin: auto;
     margin-top: 1em;
